syntax = "proto3";

import "lib.proto";

package chama;

service ChamasService {
  rpc CreateChama(CreateChamaRequest) returns (Chama);
  rpc UpdateChama(UpdateChamaRequest) returns (Chama);
  rpc JoinChama(JoinChamaRequest) returns (Chama);
  rpc InviteMembers(InviteMembersRequest) returns (Chama);
  rpc FindChama(FindChamaRequest) returns (Chama);
  rpc FilterChamas(FilterChamasRequest) returns (PaginatedFilterChamasResponse);
}

message Chama {
  string id = 1;

  string name = 2;

  optional string description = 3;

  repeated ChamaMember members = 4;

  // User ID of member creating the chama
  string created_by = 5;
}

message ChamaMember {
  string user_id = 1;
  repeated ChamaMemberRole roles = 3;
}

message ChamaInvite {
  optional string phone_number = 1;

  optional string nostr_npub = 2;

  repeated ChamaMemberRole roles = 3;
}

enum ChamaMemberRole {
  Member = 0;
  Admin = 1;
  ExternalAdmin = 3;
}

message CreateChamaRequest {
  string name = 1;
  optional string description = 2;
  repeated ChamaMember members = 3;
  repeated ChamaInvite invites = 4;
  string created_by = 5;
}

message UpdateChamaRequest {
  string chama_id = 1;
  ChamaUpdates updates = 2;
}

message ChamaUpdates {
  optional string name = 1;
  optional string description = 2;
  repeated ChamaMember add_members = 3;
}

message FindChamaRequest {
  string chama_id = 1;
}

message FilterChamasRequest {
  optional string created_by = 1;
  optional string member_id = 2;
  reserved 3,4,5,6,7,8,9,10;
  optional lib.PaginatedRequest pagination = 11;
}

message PaginatedFilterChamasResponse {
  repeated Chama chamas = 1;
  // Current page offset
  int32 page = 2;
  // Number of items return per page
  int32 size = 3;
  // Number of pages given the current page size
  int32 pages = 4;
}

message JoinChamaRequest {
  string chama_id = 1;
  ChamaMember member_info = 2;
}

message InviteMembersRequest {
  string chama_id = 1;
  repeated ChamaInvite invites = 3;
}
